[package]
name = "read-pcx"
version = "0.1.0"
authors = ["Daniel Di Marco <d.dimarco@gmx.de>"]

[profile.release]
# enable debug symbols in release
debug = true

[dependencies.sdl2]
path = "src/rust-sdl2"

[dependencies]
# sdl2 = "0.20.1"
# sdl2-sys = "0.19.0"
byteorder = "*"
libc = "*"
enum_primitive = "*"
num = "*"
rand = "*"
